exports[`Main (supplied Layout) should render a page from the \`routing\` module 1`] = `
<main
  className="body-divider pbl"
  id="maincontent"
  role="main">
  <pre>
    {
     \"data\": {
      \"actions\": [],
      \"class\": [
       \"collection\"
      ],
      \"entities\": [],
      \"links\": [
       {
        \"href\": \"/\",
        \"rel\": [
         \"self\"
        ],
        \"title\": \"Something Savvy\"
       }
      ],
      \"properties\": {},
      \"title\": \"Testing Main Component\"
     },
     \"error\": false,
     \"path\": \"/home\",
     \"status\": 200
    }
  </pre>
</main>
`;

exports[`Main (supplied Layout) should render the Error component; when the \`class\` property is absent 1`] = `
<main
  className="body-divider pbl"
  id="maincontent"
  role="main">
  <pre>
    {
     \"data\": {
      \"actions\": [],
      \"entities\": [],
      \"links\": [
       {
        \"href\": \"/\",
        \"rel\": [
         \"self\"
        ],
        \"title\": \"Something Savvy\"
       }
      ],
      \"properties\": {},
      \"title\": \"Testing Main Component\"
     },
     \"error\": false,
     \"path\": \"/home\",
     \"status\": 200
    }
  </pre>
</main>
`;

exports[`Main (supplied Layout) should render the Error component; when the class type is not: collection or item 1`] = `
<main
  className="body-divider pbl"
  id="maincontent"
  role="main">
  <pre>
    {
     \"data\": {
      \"actions\": [],
      \"class\": [
       \"something-else\"
      ],
      \"entities\": [],
      \"links\": [
       {
        \"href\": \"/\",
        \"rel\": [
         \"self\"
        ],
        \"title\": \"Something Savvy\"
       }
      ],
      \"properties\": {},
      \"title\": \"Testing Main Component\"
     },
     \"error\": false,
     \"path\": \"/home\",
     \"status\": 200
    }
  </pre>
</main>
`;

exports[`Main (supplied Layout) should render the Error component; when the response is an error 1`] = `
<main
  className="body-divider pbl"
  id="maincontent"
  role="main">
  <pre>
    {
     \"data\": {
      \"actions\": [],
      \"class\": [
       \"collection\"
      ],
      \"entities\": [],
      \"links\": [
       {
        \"href\": \"/\",
        \"rel\": [
         \"self\"
        ],
        \"title\": \"Something Savvy\"
       }
      ],
      \"properties\": {},
      \"title\": \"Testing Main Component\"
     },
     \"error\": {},
     \"path\": \"/home\",
     \"status\": 200
    }
  </pre>
</main>
`;

exports[`Main (supplied Layout) should render the Rest.Collection component 1`] = `
<main
  className="body-divider pbl"
  id="maincontent"
  role="main">
  <pre>
    {
     \"data\": {
      \"actions\": [],
      \"class\": [
       \"collection\"
      ],
      \"entities\": [],
      \"links\": [
       {
        \"href\": \"/\",
        \"rel\": [
         \"self\"
        ],
        \"title\": \"Something Savvy\"
       }
      ],
      \"properties\": {},
      \"title\": \"Testing Main Component\"
     },
     \"error\": false,
     \"path\": \"/home\",
     \"status\": 200
    }
  </pre>
</main>
`;

exports[`Main (supplied Layout) should render the Rest.Item component 1`] = `
<main
  className="body-divider pbl"
  id="maincontent"
  role="main">
  <pre>
    {
     \"data\": {
      \"actions\": [],
      \"class\": [
       \"item\"
      ],
      \"entities\": [],
      \"links\": [
       {
        \"href\": \"/\",
        \"rel\": [
         \"self\"
        ],
        \"title\": \"Something Savvy\"
       }
      ],
      \"properties\": {},
      \"title\": \"Testing Main Component\"
     },
     \"error\": false,
     \"path\": \"/home\",
     \"status\": 200
    }
  </pre>
</main>
`;
